// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileCardImageView should render correct background based on mediaType" 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','Roboto','Oxygen','Ubuntu','Fira Sans','Droid Sans','Helvetica Neue',sans-serif;
  box-shadow: 0 1px 1px rgba(9, 30, 66, 0.2),0 0 1px 0 rgba(9, 30, 66, 0.24);
  border-radius: 3px;
  background: transparent;
  line-height: normal;
  position: relative;
  width: 100%;
  height: 100%;
}

.emotion-0 * {
  box-sizing: border-box;
}

.emotion-0::selection,
.emotion-0 *::selection {
  background-color: transparent;
}

.emotion-0::-moz-selection,
.emotion-0 *::-moz-selection {
  background-color: transparent;
}

.emotion-0::after {
  content: '';
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  box-sizing: border-box;
  pointer-events: none;
  border-radius: 3px;
}

.emotion-0 .wrapper {
  border-radius: 3px;
  display: block;
  height: inherit;
  position: relative;
}

.emotion-0 .wrapper .img-wrapper {
  position: relative;
  width: inherit;
  height: inherit;
  overflow: hidden;
  display: block;
  border-radius: 3px;
}

<div
  className="media-file-card-view  emotion-0"
  data-testid="media-file-card-view"
  id="cardImageViewWrapper"
/>
`;

exports[`FileCardImageView should render correct background based on mediaType" 2`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','Roboto','Oxygen','Ubuntu','Fira Sans','Droid Sans','Helvetica Neue',sans-serif;
  box-shadow: 0 1px 1px rgba(9, 30, 66, 0.2),0 0 1px 0 rgba(9, 30, 66, 0.24);
  border-radius: 3px;
  background: #F4F5F7;
  line-height: normal;
  position: relative;
  width: 100%;
  height: 100%;
}

.emotion-0 * {
  box-sizing: border-box;
}

.emotion-0::selection,
.emotion-0 *::selection {
  background-color: transparent;
}

.emotion-0::-moz-selection,
.emotion-0 *::-moz-selection {
  background-color: transparent;
}

.emotion-0::after {
  content: '';
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  box-sizing: border-box;
  pointer-events: none;
  border-radius: 3px;
}

.emotion-0 .wrapper {
  border-radius: 3px;
  display: block;
  height: inherit;
  position: relative;
}

.emotion-0 .wrapper .img-wrapper {
  position: relative;
  width: inherit;
  height: inherit;
  overflow: hidden;
  display: block;
  border-radius: 3px;
}

<div
  className="media-file-card-view  emotion-0"
  data-testid="media-file-card-view"
  id="cardImageViewWrapper"
/>
`;
